updated all login and reset password related files

--- a/Trappist/src/Promact.Trappist.Web/Views/Account/ForgotPassword.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model  Promact.Trappist.DomainModel.ApplicationClasses.Account.ForgotPassword
+@{
     Layout = "_BeforeLoginLayout";
 }
 
@@ -6,13 +7,16 @@
     <div class="titlebar">
         <h1>Forgot Password</h1>
     </div>
-    <form>
+    <form asp-controller="Account" asp-action="ForgotPassword" method="post">
         <div class="form-group">
-            <input type="email" class="form-control" placeholder="Provide your Email here" />
+            <input asp-for="Email" class="form-control" placeholder="Provide your Email here" required="" />
+            <div class="errors-container">
+                <span asp-validation-for="Email" class="error-msg">@ViewBag.Error</span>
+            </div>
         </div>
         <div class="actions-area">
             <button type="submit" class="btn btn-primary">Send Password Reset Link</button>
-            <a href="">Back to Login</a>
+            <a asp-action="Login">Back to Login</a>
         </div>
     </form>
 </div>
