--- a/Trappist/src/Promact.Trappist.Web/Views/Account/ResetPassword.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model  Promact.Trappist.DomainModel.ApplicationClasses.Account.ResetPassword
+@{
     Layout = "_BeforeLoginLayout";
 }
 
@@ -6,12 +7,25 @@
     <div class="titlebar">
         <h1>Reset Password</h1>
     </div>
-    <form>
+    <form asp-controller="Account" asp-action="ResetPassword" method="post">
+        <input asp-for="Code" type="hidden" />
         <div class="form-group">
-            <input type="password" class="form-control" placeholder="New Password" />
+            <input asp-for="Email" class="form-control" placeholder="Email" reqired="" />
+            <div class="errors-container">
+                <span asp-validation-for="Email" class="error-msg">@ViewBag.Error</span>
+            </div>
         </div>
         <div class="form-group">
-            <input type="password" class="form-control" placeholder="Confirm Password" />
+            <input asp-for="Password" class="form-control" placeholder="New Password" reqired="" />
+            <div class="errors-container">
+                <span asp-validation-for="Password" class="error-msg"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <input asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password" required="" />
+            <div class="errors-container">
+                <span asp-validation-for="ConfirmPassword" class="error-msg"></span>
+            </div>
         </div>
         <div class="actions-area">
             <button type="submit" class="btn btn-primary mb0">Submit</button>
