--- a/Trappist/src/Promact.Trappist.Web/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/ResetPasswordConfirmation.cshtml
@@ -7,6 +7,6 @@
         <h1>Forgot Password Confirmation</h1>
     </div>
     <div class="msg-area">
-        <h4>Your password has been reset. Please <a href="">Click Here</a> to sign in.</h4>
+        <h4>Your password has been reset. Please <a asp-controller="Account" asp-action="Login">Click Here</a> to sign in.</h4>
     </div>
 </div>
