Made after development design changes.

--- a/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
@@ -13,7 +13,7 @@
     </div>
 
     <form asp-controller="Account" asp-action="Login" method="post">
-        <div class="error-msg">@ViewBag.Error</div>
+        <span class="general-error-msg">@ViewBag.Error</span>
         <div class="form-group">
             <input asp-for="Email" class="form-control" placeholder="Email" autocomplete="off" required="" />
             <div class="errors-container">
