remove required  attribute from login and forgotpassword cshtml

--- a/Trappist/src/Promact.Trappist.Web/Views/Account/ForgotPassword.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/ForgotPassword.cshtml
@@ -9,7 +9,7 @@
     </div>
     <form asp-controller="Account" asp-action="ForgotPassword" method="post">
         <div class="form-group">
-            <input asp-for="Email" class="form-control" placeholder="Provide your Email here" required="" />
+            <input asp-for="Email" class="form-control" placeholder="Provide your Email here"/>
             <div class="errors-container">
                 <span asp-validation-for="Email" class="error-msg">@ViewBag.Error</span>
             </div>
