--- a/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
@@ -15,14 +15,14 @@
     <form asp-controller="Account" asp-action="Login" method="post">
         <span class="general-error-msg">@ViewBag.Error</span>
         <div class="form-group">
-            <input asp-for="Email" class="form-control" placeholder="Email" autocomplete="off" required="" />
+            <input asp-for="Email" class="form-control" placeholder="Email" autocomplete="off"/>
             <div class="errors-container">
                 <span asp-validation-for="Email" class="error-msg"></span>
             </div>
         </div>
 
         <div class="form-group">
-            <input asp-for="Password" class="form-control" placeholder="Password" autocomplete="off" required="" onpaste="return false;" />
+            <input asp-for="Password" class="form-control" placeholder="Password" autocomplete="off" onpaste="return false;" />
             <div class="errors-container">
                 <span asp-validation-for="Password" class="error-msg"></span>
             </div>
