--- a/Trappist/src/Promact.Trappist.Web/Views/Account/ResetPassword.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/ResetPassword.cshtml
@@ -10,19 +10,19 @@
     <form asp-controller="Account" asp-action="ResetPassword" method="post">
         <input asp-for="Code" type="hidden" />
         <div class="form-group">
-            <input asp-for="Email" class="form-control" placeholder="Email" reqired="" />
+            <input asp-for="Email" class="form-control" placeholder="Email"/>
             <div class="errors-container">
                 <span asp-validation-for="Email" class="error-msg">@ViewBag.Error</span>
             </div>
         </div>
         <div class="form-group">
-            <input asp-for="Password" class="form-control" placeholder="New Password" reqired="" />
+            <input asp-for="Password" class="form-control" placeholder="New Password"/>
             <div class="errors-container">
                 <span asp-validation-for="Password" class="error-msg"></span>
             </div>
         </div>
         <div class="form-group">
-            <input asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password" required="" />
+            <input asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password"/>
             <div class="errors-container">
                 <span asp-validation-for="ConfirmPassword" class="error-msg"></span>
             </div>
