--- a/Trappist/src/Promact.Trappist.Web/wwwroot/css/style.scss
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/css/style.scss
@@ -1483,6 +1483,43 @@ footer {
   }
 }
 
+/* Test Conduct */
+.test-conduct {
+  padding: 50px 0 100px;
+
+  .promact-logo {
+    img {
+      width: 180px;
+      margin-bottom: 50px;
+    }
+  }
+
+  .registration-block {
+    width: 600px;
+    margin: 0 auto;
+    background-color: $color_white;
+    border: 1px solid $color_border;
+    padding: 40px 20px;
+
+    h2 {
+      margin-bottom: 30px;
+    }
+  }
+
+  .trappist-logo {
+    margin-top: 40px;
+    p {
+      font-size: 11px;
+      color: $color_base_secondary;
+      margin-bottom: 0;
+    }
+
+    img {
+      width: 70px;
+    }
+  }
+}
+
 /* Responsive */
 @media (max-width: 992px) {
   .form-group .form-control.half-width {
@@ -1506,6 +1543,12 @@ footer {
           min-width: 110px;
         }
       }
+    }
+  }
+
+  .basic-setup {
+    .setup-content {
+      width: 600px;
     }
   }
 }
