--- a/Trappist/src/Promact.Trappist.Web/Views/Account/ResetPassword.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/ResetPassword.cshtml
@@ -8,6 +8,7 @@
         <h1>Reset Password</h1>
     </div>
     <form asp-controller="Account" asp-action="ResetPassword" method="post">
+        <span class="general-error-msg">@ViewBag.LinkError</span>
         <input asp-for="Code" type="hidden" />
         <div class="form-group">
             <input asp-for="Email" class="form-control" placeholder="Email"/>
