changed baseurl for setup and conduct pages

--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewBag.BaseHref = "/conduct";
+}
+
 <conduct>
     <div class="loader-container main-loader">
         <div class="loader-block">
