--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Setup.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Setup.cshtml
@@ -1,4 +1,8 @@
-﻿<setup>
+﻿@{
+    ViewBag.BaseHref = "/setup";
+}
+
+<setup>
     <div class="loader-container main-loader">
         <div class="loader-block">
             <div class="spinner"></div>
